# DoorOpener

./: .commitmsg  .coverage  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.rust  README.md  VERSION  app.py  config.ini.example  config.py  docker-compose.rust.yml  docker-compose.yml  options.json.example  repository.yaml  requirements-dev.txt  requirements.txt  security.py  users_store.py
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  sysdig-scan.yml
blueprints/: admin.py  auth.py  door.py
dooropener/: DOCS.md  Dockerfile  app.py  build.yaml  config.py  config.yaml  ha_client.py  requirements.txt  run.sh  security.py  users_store.py
dooropener/templates/: admin.html  index.html
rust/: Cargo.toml
rust/src/: config.rs  ha_client.rs  logging.rs  main.rs  rate_limit.rs  state.rs  users_store.rs
rust/src/routes/: admin.rs  door.rs  index.rs  mod.rs  oidc.rs
templates/: admin.html  index.html
tests/: conftest.py  test_admin_users.py  test_app.py  test_csrf.py  test_more.py  test_routes.py  test_security.py  test_ssl.py  test_utils.py
